# StarkDefi

./: .cairofmtignore  .codecov.yml  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Scarb.toml  docker-compose.yaml  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  protostar.toml  pyproject.toml  requirements.txt  snfoundry.toml  tsconfig.json
.github/workflows/: unit-test.yaml
StarkDefi/: protostar.toml
contracts/: contract.cairo
contracts/dex/: StarkDFactory.cairo  StarkDPair.cairo  StarkDPathFinder.cairo  StarkDRouter.cairo  dex_contract.cairo
contracts/farm/: farm.cairo
contracts/mint/: mint.cairo
contracts/multicall/: multicall.cairo
contracts/token/: ERC20.cairo  Scarb.toml
contracts_old/dex/: SingletonAMM.cairo  StarkDFactory.cairo  StarkDRouter.cairo  StarkDRouterAggregator.cairo
contracts_old/token/: ERC20.cairo
scripts/: compileContract.ts  deploy.ts  deploy_old.ts  utils.ts
src/: dex.cairo  lib.cairo  tests.cairo  utils.cairo
src/contract/: hello_starknet.cairo
src/dex/: v1.cairo
src/tests/: factory.cairo  helper_account.cairo  pair.cairo  router.cairo  utils.cairo
src/token/: erc20.cairo
src/utils/: ContractAddressPartialOrd.cairo  array_ext.cairo  (+8 more)
test/: addRemoveLiquidity.ts  deployment.ts  pairCreationVariations.ts  pathFinder.ts  protocolFee.ts  swap.ts  updates.ts  utils.ts
tests/: deployment.ts  index.ts  test_contract.py  test_contract_address_partial_ord.cairo  test_factory.cairo  test_hello_starknet.cairo  test_pair.cairo  test_router.cairo  test_utils.cairo  utils.ts
(+56 files in other folders)
