[tool.poetry]
name = "starkdefi"
version = "0.1.0"
description = "StarkDefi Smart contracts"
authors = ["Starkdefi"]
license = "Apache-2.0"
repository = "https://github.com/Starkdefi/StarkDefi-contracts"
readme = "README.md"
keywords = ["starknet", "starkdefi", "cairo"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
cairo-lang = "^0.9.0"
immutablex-starknet = "0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
